...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/step_description"
        style="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
...
